--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,11 +1,11 @@
 body 
 { 
-    color:#333;
-    text-align: left;
-    font-family: "Arial";
+    color: #333;
+    text-align: center;
+    font-family: Courier;
     font-size: 16px;
     margin: 0;
-    padding: 0;
+    padding: 0
 }
 #container 
 {
